--- a/web/static/assets/css/style.css
+++ b/web/static/assets/css/style.css
@@ -120,8 +120,8 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #topbar {
     background: #106eea;
-    height: 20px;
-    font-size: 12px;
+    height: 30px;
+    font-size: 10px;
     transition: all 0.5s;
     color: #fff;
     padding: 0;
@@ -163,13 +163,12 @@ h1, h2, h3, h4, h5, h6 {
 # Header
 --------------------------------------------------------------*/
 #header {
-
   background: #fff;
   transition: all 0.5s;
   z-index: 997;
-  height: 45px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-}!important
+  height: 55px;
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+}
 
 #header.fixed-top {
   height: 45px;
@@ -346,7 +345,7 @@ h1, h2, h3, h4, h5, h6 {
 */
 .mobile-nav-toggle {
   color: #222222;
-  font-size: 28px;
+  font-size: 30px;
   cursor: pointer;
   display: none;
   line-height: 0;
@@ -373,7 +372,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 0;
   left: 0;
   bottom: 0;
-  background: rgba(9, 9, 9, 0.9);
+  background: rgb(241 241 241 / 90%);
   transition: 0.3s;
   z-index: 999;
 }
@@ -395,6 +394,7 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #fff;
   overflow-y: auto;
   transition: 0.3s;
+  border-radius: 8px;
 }
 
 .navbar-mobile a {
@@ -464,7 +464,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero:before {
   content: "";
-  background: rgba(255, 255, 255, 0.6);
+  background: rgb(255 255 255 / 68%);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -548,7 +548,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 768px) {
   #hero {
-    height: 100vh;
+    height: 50vh;
   }
   #hero h1 {
     font-size: 28px;
@@ -902,18 +902,20 @@ section {
 .services .icon-box {
   text-align: center;
   border: 1px solid #e2eefd;
-  padding: 80px 20px;
+  padding: 20px 20px;
   transition: all ease-in-out 0.3s;
   background: #fff;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
 .services .icon-box .icon {
   margin: 0 auto;
-  width: 64px;
-  height: 64px;
+  width: 50px;
+  height: 50px;
   background: #f1f6fe;
   border-radius: 4px;
-  border: 1px solid #deebfd;
+  border: 1px solid gainsboro;
   display: flex;
   align-items: center;
   justify-content: center;
