Changed the interface

--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -7,7 +7,7 @@
 
     <title>ANOVIN</title>
     <meta content="Professional web development company." name="description">
-    <meta content="web, development, python, django, html, css, bootstrap 5" name="keywords">
+    <meta content="web, development, python, django, javascript, html, css, bootstrap 5" name="keywords">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <!-- Favicons -->
