--- a/web/templates/tutorials.html
+++ b/web/templates/tutorials.html
@@ -52,35 +52,68 @@
         }
 
     </style>
-<body class=" vw-100 d-flex align-items-center justify-content-center flex-column bg-dark p-5">
+<body class="d-flex align-items-center justify-content-center flex-column bg-dark p-5">
 
 
-<div class="tag-cloud d-flex align-items-center justify-content-center  flex-column w-100 h-auto p-2"
-     style="border-radius: 12px; background: dodgerblue;">
+<div class="container">
+    <div class="tag-cloud d-flex align-items-center justify-content-center  flex-column w-100 h-auto p-4"
+         style="border-radius: 12px; background: dodgerblue;">
 
-    <input type="text" class="form-control form-control-color w-75 shadow-sm m-3" placeholder="Search">
+        <input type="text" class="form-control form-control-color w-100 shadow-sm m-3" placeholder="Search">
 
-    <div class="d-flex flex-wrap align-items-center justify-content-center">
-        {% for tag in tags %}
-            <span class="badge text-bg-primary m-2 p-2" style="cursor: pointer;">{{ tag.name }}</span>
+        {% for t in tuts %}
+            <div class="w-100 shadow-sm d-flex align-items-center"
+                 style="color:ghostwhite; border-radius: 8px; margin: 10px; padding: 20px;">
+
+                <img src="{{ t.img.url }}" style="width: 50px; margin-left: 10px; margin-right: 20px;">
+                <div class="">
+                    <h5>{{ t.title }}</h5>
+                    <span class="shadow p-2" style="border-radius: 8px; font-size: 13px; ">In: {{ t.category }}</span>
+                </div>
+
+
+            </div>
         {% endfor %}
+        <div class="d-flex flex-wrap align-items-center justify-content-center d-none">
+            {% for tag in tags %}
+                <span class="badge text-bg-primary m-2 p-2" style="cursor: pointer;">{{ tag.name }}</span>
+            {% endfor %}
+        </div>
+
     </div>
+</div>
+
+<div id="bracket-holder" class="container d-flex align-items-center justify-content-start">
+    <form method="post" action="/tags/" id="tag-form" class="p-3 border bg-white m-4 shadow-sm "
+          style="border-radius: 8px;">
+        {% csrf_token %}
+        <div class="form-group">
+            <h5>Create a tag</h5>
+
+            <label for="name" class="mt-3 mb-1" style="font-size: 12px;">Tag Name:</label>
+            <input type="text" class="form-control mb-0 mt-0" id="name" name="name" style="height: 30px;">
+        </div>
+        <button type="submit" class="btn btn-primary btn-sm m-0">Create</button>
+    </form>
+
+    <form method="post" action="/cats/" id="category-form" class="p-3 border bg-white m-4 shadow-sm "
+          style="border-radius: 8px;">
+        {% csrf_token %}
+        <div class="form-group">
+            <h5>Create a category</h5>
+
+            <label for="name" class="mt-3 mb-1" style="font-size: 12px;">Category name:</label>
+            <input type="text" class="form-control mb-0 mt-0" id="name" name="name" style="height: 30px;">
+        </div>
+        <button type="submit" class="btn btn-primary btn-sm m-0">Create</button>
+    </form>
+
 
 </div>
 
 
-<form method="post" action="/tags/" id="tag-form" class="p-2 border bg-white m-4">
-    {% csrf_token %}
-    <div class="form-group">
-        <label for="name">Name:</label>
-
-        <input type="text" class="form-control mb-3" id="name" name="name">
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-
-
-<div class="bg-light w-100 p-4">
+<div class="p-3 border bg-white m-4 shadow-sm " style="border-radius: 8px;">
+    <h4 class="mb-3">Create a tutorial</h4>
     <form id="tutorial-form" enctype="multipart/form-data" action="{% url 'tutorials_list' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
@@ -97,7 +130,7 @@
         </div>
         <div class="form-group">
             <label for="tags">Category</label>
-            <select  class="form-select" id="category" required name="category">
+            <select class="form-select" id="category" required name="category">
                 {% for cat in cats %}
                     <option value="{{ cat.id }}">{{ cat.name }}</option>
                 {% endfor %}
@@ -129,11 +162,21 @@
     });
 </script>
 <script>
-    const formTag = document.getElementById('tutorial-form');
+    const formTag = document.getElementById('tag-form');
     formTag.addEventListener('submit', function (event) {
         event.preventDefault(); // Prevent the default form submission behavior
         console.log(event)
         formTag.submit();
+        location.reload()
+    });
+</script>
+<script>
+    const formTag = document.getElementById('category-form');
+    formTag.addEventListener('submit', function (event) {
+        event.preventDefault(); // Prevent the default form submission behavior
+        console.log(event)
+        formTag.submit();
+        location.reload()
     });
 </script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
