--- a/web/templates/ruststained/index.html
+++ b/web/templates/ruststained/index.html
@@ -1,10 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>Ruststaind | Official Website</title>
+    <meta name="description"
+          content="Ruststained is a heavy metal band known for their progressive sound.
+           Visit our website to hear our music, find out about our upcoming shows, and more.">
+    <meta property="og:title" content="Ruststaind | Official Website">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.ruststaind.com/">
+    <meta property="og:image" content="https://www.ruststaind.com/images/band_photo.jpg">
+    <meta property="og:description"
+          content="Ruststained is a heavy metal band known for their progressive sound.
+           Visit our website to hear our music, find out about our upcoming shows, and more.">
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
+
+    <style>
+        body {
+            background-color: #444;
+        }
+
+        .navbar {
+            background-color: #333;
+        }
+
+        .nav-item {
+            color: #fff;
+        }
+
+        .navbar-toggler {
+            padding: 5px;
+            border: 0;
+        }
+    </style>
 </head>
 <body>
-$END$
+<nav class="navbar navbar-expand-lg bg-dark text-light navbar-dark">
+    <div class="container d-flex justify-content-between">
+        <a class="navbar-brand m-0" href="#">Ruststained</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Music</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<img src="https://github.com/jum-mk/Google-Markers/blob/master/band_photo.png?raw=true"
+     class=" m-0 vw-100 vh-100" href="#">Ruststained</img>
+
 </body>
 </html>
