--- a/web/templates/tutorials/footer.html
+++ b/web/templates/tutorials/footer.html
@@ -1,10 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% load static %}
+<!-- ======= Footer ======= -->
+<footer id="footer">
+
+    <div class="footer-newsletter d-flex flex-column align-items-center justify-content-center">
+        <h4>Subscribe to our newsletter</h4>
+        <div class="newsletter d-flex align-items-center justify-content-center">
+            <input type="email" class="form-control">
+            <button class="p-1 btn-primary" style="height: 38px; border-radius: 3px;">Join</button>
+        </div>
+    </div>
+
+    <div class="footer-top">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-3 col-md-6 footer-contact">
+                    <a href="index.html" class="logo">
+                        <div style="color:black; margin-bottom: 0rem;!important; font-size: 1.3rem;">ANO<span
+                                style="color:#106eea;">V</span>IN
+                        </div>
+                    </a>
+
+                    <p style="color:black;">
+                        ul. Zborsko br. 2b <br>
+                        Skopje, 1000<br>
+                        Macedonia <br><br>
+                        <strong>Phone:</strong> +389 74 747 288<br>
+                        <strong>Email:</strong> anovindooel@gmail.com<br>
+                    </p>
+                </div>
+
+                <div class="col-lg-3 col-md-6 footer-links">
+                    <h4>Useful Links</h4>
+                    <ul>
+                        <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="#">Stack</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
+                        <li><i class="bx bx-chevron-right"></i> <a href="#">Portfolio</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-lg-3 col-md-6 footer-links">
+                    <h4>Our Social Networks</h4>
+                    <div class="social-links mt-3">
+                        <a href="https://github.com/starscream32/jum-journal-system/tree/master" class="github"><i
+                                class="bx bxl-github"></i></a>
+                        <a href="https://www.linkedin.com/in/aleksej-anovski-50aaab21a/" class="linkedin"><i
+                                class="bx bxl-linkedin"></i></a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="container py-4">
+        <div class="copyright">
+            &copy; Copyright <strong><span>anovin</span></strong>. All Rights Reserved
+        </div>
+        <div class="credits">
+            Designed by <a href="#">anovski</a>
+        </div>
+    </div>
+</footer><!-- End Footer -->
