--- a/web/templates/tutorials/single_tag.html
+++ b/web/templates/tutorials/single_tag.html
@@ -29,6 +29,7 @@
     <meta property="og:image" content="{% static 'assets/img/2.png' %}"/>
     <meta property="og:type" content="website"/>
 
+
     <style>
         form {
             max-width: 600px;
@@ -81,7 +82,7 @@
         }
 
     </style>
-<body class="">
+<body>
 {% include 'menu.html' %}
 <div class="container">
     <div class="tag-cloud d-flex align-items-center justify-content-center flex-column w-100 h-auto p-2"
@@ -90,8 +91,8 @@
         <h1 class="mt-4 mb-3" align="center">Explore our tutorial database</h1>
 
         <div class="w-100" style="margin-bottom:30px;">
-            <form method="get" action="{% url 'tutorials' %}" class="d-flex  flex-column flex-md-row mb-4">
-                <input id='instantSearch' type="text" class="form-control  w-100 shadow-sm  mt-3 mb-1 mb-md-0"
+            <form method="get" action="{% url 'tutorials' %}" class="d-flex  flex-column flex-md-row">
+                <input id='instantSearch' type="text" class="form-control  w-100 shadow-sm  mt-3"
                        style="border-radius: 8px; height: 40px; "
                        placeholder="Search" name="instant_search">
                 <button type="submit" class="btn mt-3 shadow-sm btn-outline-primary search-button float-end ms-md-3"
@@ -108,7 +109,7 @@
 
 
                 <div class="">
-                    <h5 class="mb-3 ms-1">{{ t.title }}</h5>
+                    <h5 class="mb-3">{{ t.title }}</h5>
                     <div class="d-inline-flex flex-wrap align-items-center">
                         <span class="shadow-sm  p-1 pe-2 ps-2  me-2 mb-1 mt-1 cat-text "
                               style="border-radius: 8px; font-size: 16px; ">{{ t.category }}</span>
@@ -133,107 +134,7 @@
     </div>
 </div>
 
-{% if request.user.is_superuser %}
-<div id="bracket-holder" class="container d-flex align-items-center justify-content-start">
-    <form method="post" action="/tags/" id="tag-form" class="p-3 border bg-white m-4 shadow-sm "
-          style="border-radius: 8px;">
-        {% csrf_token %}
-        <div class="form-group">
-            <h5>Create a tag</h5>
-
-            <label for="name" class="mt-3 mb-1" style="font-size: 12px;">Tag Name:</label>
-            <input type="text" class="form-control mb-0 mt-0" id="tag-name" name="name" style="height: 30px;">
-        </div>
-        <button type="submit" class="btn btn-primary btn-sm m-0">Create</button>
-    </form>
-
-    <form method="post" action="/cats/" id="category-form" class="p-3 border bg-white m-4 shadow-sm "
-          style="border-radius: 8px;">
-        {% csrf_token %}
-        <div class="form-group">
-            <h5>Create a category</h5>
-
-            <label for="name" class="mt-3 mb-1" style="font-size: 12px;">Category name:</label>
-            <input type="text" class="form-control mb-0 mt-0" id="name" name="name" style="height: 30px;">
-        </div>
-        <button type="submit" class="btn btn-primary btn-sm m-0">Create</button>
-    </form>
-
-
-</div>
-
-
-<div class="p-3 border bg-white m-4 shadow-sm " style="border-radius: 8px;">
-    <h4 class="mb-3">Create a tutorial</h4>
-    <form id="tutorial-form" enctype="multipart/form-data" action="{% url 'tutorials_list' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <label for="title">Title</label>
-            <input type="text" id="title" class="form-control" required name="title">
-        </div>
-        <div class="form-group">
-            <label for="meta_description">Description</label>
-            <textarea id="meta_description" class="form-control" rows="3" required name="meta_description"></textarea>
-        </div>
-        <div class="form-group">
-            <label for="content">Content</label>
-            <textarea id="content" class="form-control" rows="10" required name="content"></textarea>
-        </div>
-        <div class="form-group">
-            <label for="tags">Category</label>
-            <select class="form-select" id="category" required name="category">
-                {% for cat in cats %}
-                <option value="{{ cat.id }}">{{ cat.name }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="tags">Tags</label>
-            <select multiple class="form-control" id="tags" required name="tags">
-                {% for tag in tags %}
-                <option value="{{ tag.id }}">{{ tag.name }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="img">Image</label>
-            <input type="file" id="img" class="form-control" name="img" required>
-        </div>
-        <button type="submit" class="btn btn-primary mt-3">Submit</button>
-    </form>
-</div>
-
-
-<script>
-    const formTutorial = document.getElementById('tutorial-form');
-    formTutorial.addEventListener('submit', function (event) {
-        event.preventDefault(); // Prevent the default form submission behavior
-        console.log(event)
-        formTutorial.submit();
-    });
-</script>
-<script>
-    const formTag = document.getElementById('tag-form');
-    formTag.addEventListener('submit', function (event) {
-        event.preventDefault(); // Prevent the default form submission behavior
-        console.log(event)
-        formTag.submit();
-        location.reload()
-    });
-</script>
-<script>
-    const formCat = document.getElementById('category-form');
-    formCat.addEventListener('submit', function (event) {
-        event.preventDefault(); // Prevent the default form submission behavior
-        console.log(event)
-        formCat.submit();
-        location.reload()
-    });
-</script>
-
-{% else%}
 {% include 'tutorials/footer.html' %}
-{% endif %}
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
