--- a/web/static/css/light_style.css
+++ b/web/static/css/light_style.css
@@ -12,10 +12,5 @@
     border: 0;
     border-radius: 0;
     overflow-anchor: none;
-    border-radius: 50px;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,border-radius .15s ease;
-}!important
-
-.accordion-flush .accordion-item .accordion-button {
-
-}!important
+}
