--- a/web/templates/menu.html
+++ b/web/templates/menu.html
@@ -1,16 +1,20 @@
 <!-- ======= Top Bar ======= -->
 <section id="topbar" class="d-flex align-items-center">
     <div class="container d-flex justify-content-center justify-content-md-between">
-        <div class="contact-info d-flex align-items-center" style="font-size:16px;">
-            <a href="https://github.com/starscream32/jum-journal-system/tree/master" class="github p-1 me-2"><i
+        <div class="contact-info d-flex align-items-center" style="font-size:20px;">
+            <a href="https://github.com/starscream32/jum-journal-system/tree/master" class=" p-1 me-2"><i
                     class="bi bi-github"></i></a>
-            <a href="https://www.linkedin.com/in/aleksej-anovski-50aaab21a/" class="linkedin"><i
+            <a href="https://www.linkedin.com/in/aleksej-anovski-50aaab21a/" class=" p-1 me-2"><i
                     class="bi bi-linkedin"></i></a>
+            <a href="https://twitter.com/anovin_/" class=" p-1 me-2"><i
+                    class="bi bi-twitter"></i></a>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
-            <a class="bi bi-envelope d-flex align-items-center"><a href="#contact">anovindooel@gmail.com</a></a>
-            <a class="bi bi-phone d-flex align-items-center ms-4"><span>+389 74 747 288</span></a>
-
+            <a href="{% url 'index' %}#contact">
+                <i class="bi bi-envelope" style="font-size: 20px;">
+                </i>
+            </a>
+            <a href="{% url 'index' %}#contact" style="font-size: 13px;">anovindooel@gmail.com</a>
         </div>
     </div>
 </section>
@@ -19,22 +23,48 @@
 <!-- ======= Header ======= -->
 <header id="header" class="d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
-        <a href="https://anovin.mk" class="logo">
+        <a href="{% url 'index' %}" class="logo">
             <div style="color:black; font-size: 1.6rem; margin-top:5px;">ANO<span
                     style="color:#106eea;">V</span>IN
             </div>
         </a>
         <nav id="navbar" class="navbar">
             <ul>
-                <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+                <li><a class="nav-link scrollto active" href="{% url 'index' %}#hero">Home</a></li>
                 <li><a class="nav-link scrollto" href="{% url 'tutorials' %}">Tutorials</a></li>
 
-                <li><a class="nav-link scrollto" href="#services">Stack</a></li>
+                <li><a class="nav-link scrollto" href="{% url 'index' %}#services">Stack</a></li>
 
-                <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+                <li><a class="nav-link scrollto" href="{% url 'index' %}#contact">Contact</a></li>
+
+                <li class="ms-4">
+                    <div class="nav-link form-check form-switch m-0 ms-3 ms-md-0">
+                        <input class="form-check-input" type="checkbox" role="switch" id="mode">
+                        <label class="form-check-label" for="mode">dark-light</label>
+                    </div>
+                    <script>
+                        let mode = document.getElementById('mode')
+                        mode.addEventListener('change', (event) => {
+
+                            event.preventDefault();
+                            if (mode.checked) {
+                                localStorage.setItem('anovin_theme', 'dark')
+                                setTheme();
+                            } else {
+                                localStorage.setItem('anovin_theme', 'light')
+                                setTheme();
+
+                            }
+                        })
+                    </script>
+                </li>
+
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
 
     </div>
 </header><!-- End Header -->
+
+
+
