dark mode, tag page, cat page, tut page, subscribe feature

--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -45,6 +45,8 @@
     * Author: BootstrapMade.com
     * License: https://bootstrapmade.com/license/
     ======================================================== -->
+
+    {% include 'tutorials/g_tag.html' %}
 </head>
 
 <body>
