--- a/web/templates/tutorials.html
+++ b/web/templates/tutorials.html
@@ -28,7 +28,7 @@
           content="{{tutorial.meta_description}}"/>
     <meta property="og:image" content="{% static 'assets/img/2.png' %}"/>
     <meta property="og:type" content="website"/>
-
+    {% include 'tutorials/g_tag.html' %}
     <style>
         form {
             max-width: 600px;
