--- a/web/templates/tutorials/single_tag.html
+++ b/web/templates/tutorials/single_tag.html
@@ -30,6 +30,8 @@
     <meta property="og:type" content="website"/>
 
 
+    {% include 'tutorials/g_tag.html' %}
+
     <style>
         form {
             max-width: 600px;
