--- a/web/templates/tutorials/single_tutorial.html
+++ b/web/templates/tutorials/single_tutorial.html
@@ -24,6 +24,8 @@
     <meta property="og:description" content="{{tutorial.meta_description}}"/>
     <meta property="og:image" content="{% static 'assets/img/2.png' %}"/>
     <meta property="og:type" content="website"/>
+
+    {% include 'tutorials/g_tag.html' %}
 </head>
 
 <style>
