--- a/web/templates/tutorials/single_category.html
+++ b/web/templates/tutorials/single_category.html
@@ -28,6 +28,8 @@
           content="{{tutorial.meta_description}}"/>
     <meta property="og:image" content="{% static 'assets/img/2.png' %}"/>
     <meta property="og:type" content="website"/>
+
+    {% include 'tutorials/g_tag.html' %}
     <style>
         form {
             max-width: 600px;
