--- a/web/templates/tutorials/single_tag.html
+++ b/web/templates/tutorials/single_tag.html
@@ -45,7 +45,7 @@
         label {
             display: block;
             margin-bottom: 0.5rem;
-            font-weight: 600;
+            font-weight: 300;
             font-size: 0.9rem;
         }
 
@@ -138,28 +138,7 @@
 
 {% include 'tutorials/footer.html' %}
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-        integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-        crossorigin="anonymous"></script>
+{% include 'main_scripts.html' %}
 
-<script>
-
-    function setTheme() {
-        if (localStorage.getItem('anovin_theme') === 'dark') {
-            document.querySelector('html').style = 'filter:invert(100);'
-            mode.checked = true
-        } else {
-            document.querySelector('html').style = 'filter:invert(0);'
-            mode.checked = false
-
-        }
-    }
-
-    window.addEventListener('DOMContentLoaded', setTheme)
-
-</script>
 </body>
 </html>
