Design change, new tutorials

--- a/web/templates/tutorials.html
+++ b/web/templates/tutorials.html
@@ -55,8 +55,12 @@
             margin-top: 1rem;
         }
 
+        .hover-bg {
+            background: ghostwhite;
+        }
+
         .hover-bg:hover {
-            background: #2182de;
+            background: whitesmoke;
         }
 
         a {
@@ -70,6 +74,8 @@
         .cat-text {
             font-family: "Josefin Sans", sans-serif;
         }
+
+        .
 
     </style>
 <body class="">
@@ -94,8 +100,8 @@
 
         {% for t in tuts %}
         <a href="{{t.get_absolute_url}}" class="text-white" style="text-decoration: none;">
-            <div class=" shadow-sm d-flex align-items-center hover-bg p-3 mb-3"
-                 style="color:black; border-radius: 8px; border: 1px solid #d2d2d2; background: white; cursor:pointer;">
+            <div class="shadow-sm d-flex align-items-center hover-bg p-3 mb-3"
+                 style="color:black; border-radius: 8px; border: 1px solid #d2d2d2; cursor:pointer;">
 
 
                 <div class="">
