--- a/web/templates/tutorials/single_tutorial.html
+++ b/web/templates/tutorials/single_tutorial.html
@@ -10,7 +10,7 @@
 
     <meta property="og:site_name" content="https://www.anovin.mk"/>
     <meta property="og:title" content="{{tutorial.title}}"/>
-    <meta property="og:url" content="{{tutorial.get_absolute_url}}"/>
+    <meta property="og:url" content="https://anovin.mk{{tutorial.get_absolute_url}}"/>
     <meta property="og:description" content="{{tutorial.meta_description}}"/>
     <meta property="og:image" content="{% static 'assets/img/2.png' %}"/>
     <meta property="og:type" content="website"/>
@@ -33,7 +33,7 @@
         display: block;
     }
 
-    h1, h2, h3, h4 {
+    h1, h2, h3, h4, h6 {
         color: #333;
         margin-top: 10px;
         margin-bottom: 8px;
@@ -69,6 +69,12 @@
     code {
         max-width: 100%;
     }
+
+    pre {
+        border-radius: 8px;
+        box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075) !important;
+        padding: 15px;
+    }
 </style>
 <body>
 {% include 'menu.html' %}
@@ -83,21 +89,43 @@
         </div>
         <div class="col-3 p-2 d-flex justify-content-end d-none d-md-block">
 
-            <a href="{{tutorial.category.get_absolute_url}}">
-                <button class="btn btn-sm btn-light d-flex p-3 shadow-sm mb-3 w-100 d-flex flex-column"
-                        style="background: #106ee9; color: black; font-weight: 100;">
-                    <h3 class="w-100 pt-1 pb-1 text-light" style="font-size:15px;border-radius: 4px; font-weight: 800;">
-                        {{ tutorial.category }}
-                    </h3>
-                </button>
-            </a>
 
-            <div class="d-flex flex-column p-3 shadow-sm" style="border-radius: 10px; background: #f1f6fe;">
+            <div class="d-flex flex-column p-2 shadow-sm border" style="border-radius: 8px; background: #f1f6fe;">
+                <a href="{{tutorial.category.get_absolute_url}}">
+                    <button class="btn btn-sm btn-light d-flex p-3 shadow-sm mb-3 w-100 d-flex flex-column border"
+                            style="background: #106ee9; color: black; font-weight: 100; border-radius: 8px;">
+                        <h3 class="w-100 pt-1 pb-1 text-light"
+                            style="font-size:15px;border-radius: 4px; font-weight: 800;">
+                            {{ tutorial.category }}
+                        </h3>
+                    </button>
+                </a>
                 <div class="d-flex flex-wrap justify-content-end align-items-center">{% for tag in tutorial.tags.all %}
                     <a href="{{tag.get_absolute_url}}">
                         <button class="btn-sm btn-primary m-1 text-bg-primary" style="font-size:13px;">
-                            <h3 style="color: whitesmoke;">{{tag}}</h3>
+                            <h4 style="color: whitesmoke;">{{tag}}</h4>
                         </button>
+                    </a>
+                    {%endfor%}
+                </div>
+            </div>
+
+            <div class="d-flex flex-column p-2 shadow-sm mt-3 border" style="border-radius: 8px; background: #f1f6fe;">
+
+                <div>
+                    <button class="btn btn-sm btn-light d-flex p-3 shadow-sm mb-3 w-100 d-flex flex-column border"
+                            style="background: #106ee9; color: black; font-weight: 100; border-radius: 8px;">
+                        <h3 class="w-100 pt-1 pb-1 text-light"
+                            style="font-size:15px;border-radius: 4px; font-weight: 800;">
+                            Related tutorials
+                        </h3>
+                    </button>
+                </div>
+                <div class="d-flex flex-column  ">{% for tut in related_tutorials %}
+                    <a href="{{tut.get_absolute_url}}">
+                        <p class=" m-1 " style="font-size:13px; color: black;">
+                        <h6 class="text-primary">{{tut.title}}</h6>
+                        </p>
                     </a>
                     {%endfor%}
                 </div>
